--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                   <tr>
                       <th style="width: 20%; min-width: 200px;">Nama Personil</th>
                       <th class="text-center" style="width: 10%;">Kontak (WA)</th>
-                      <th style="width: 20%; min-width: 150px;">Jenjang & Bidang Ilmu</th> 
+                      <th style="width: 20%; min-width: 150px;">Jenjang Pendidikan</th> 
                       <th style="width: 20%; min-width: 150px;">Sertifikat</th>
                       <th class="text-center" style="width: 8%;">Jenjang</th>
                       <th class="text-center" style="width: 8%;">Sisa Waktu</th>
@@ -967,7 +967,7 @@
                 <div class="mt-2 d-md-none">${finalBadge}</div>
                 
                 <div class="d-md-none mt-3">
-                   <div class="mobile-card-label">Info Bidang</div>
+                   <div class="mobile-card-label">Jenjang Pendidikan</div>
                    <div class="small mb-2">${person.bidang || '-'}</div>
                    
                    <div class="mobile-card-label">Detail Sertifikat</div>
@@ -1368,3 +1368,4 @@
   </script>
 </body>
 </html>
+
