--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
         const btnNext = document.createElement('button'); btnNext.className = 'btn-page'; btnNext.innerHTML = '<i class="bi bi-chevron-right"></i>'; btnNext.disabled = currentPage === totalPages; btnNext.onclick = () => renderCallback(currentPage + 1); container.appendChild(btnNext);
     }
 
-    // --- MODIFIED RENDER SKK FOR MOBILE CARD VIEW & LPSE AGGREGATION ---
+    // --- MODIFIED RENDER SKK: FIX DUPLICATE LPSE & DISPLAY LOGIC ---
     function renderSKK(data, page = 1) {
       currentPageSkk = page; const tbody = document.getElementById('bodySkk'); let htmlContent = []; let statTotal = 0, statUsed = 0, statExpired = 0;
       if(!data || data.length === 0) { document.getElementById('msgSkk').classList.remove('d-none'); document.getElementById('pagination-skk').innerHTML = ''; animateValue("skk-total", 0, 0, 800); animateValue("skk-expired", 0, 0, 800); animateValue("skk-used", 0, 0, 800); tbody.innerHTML = ''; return; } else { document.getElementById('msgSkk').classList.add('d-none'); }
@@ -920,13 +920,18 @@
               const pName = (row[1] || "").trim(); 
               const pStatus = (row[12] || "").toLowerCase(); 
               if (pName && pStatus.includes('active')) { 
-                  // Use Set to store unique LPSEs
-                  const lpse = (row[5] || "").trim();
+                  // CLEAN UP: Trim spaces & remove duplicate spaces to ensure uniqueness
+                  let lpse = (row[5] || "").trim().replace(/\s+/g, ' ');
                   if(lpse) {
                       if (!activeAssignmentsMap.has(pName)) {
-                          activeAssignmentsMap.set(pName, new Set());
+                          // Use a Map to store Lowercase Key -> Original Value mapping
+                          // This prevents "Kabupaten Badung" and "kabupaten badung" from appearing twice
+                          activeAssignmentsMap.set(pName, new Map());
                       }
-                      activeAssignmentsMap.get(pName).add(lpse);
+                      const lpseKey = lpse.toLowerCase();
+                      if(!activeAssignmentsMap.get(pName).has(lpseKey)){
+                          activeAssignmentsMap.get(pName).set(lpseKey, lpse);
+                      }
                   }
               } 
           } 
@@ -946,11 +951,11 @@
           for(let j=0; j<person.items.length; j++){ const item = person.items[j]; const s = (item.statusRaw || "").toLowerCase(); const k = (item.ketRaw || "").toLowerCase(); if (s.includes('used') || k.includes('used')) { isUsed = true; if(s.includes('used')) spreadsheetUsedText = item.statusRaw; else if (k.includes('used')) spreadsheetUsedText = item.ketRaw; } if (s.includes('active') || s.includes('available')) hasActive = true; }
           
           // LOGIC: Retrieve and Format Aggregated LPSE String
-          const activeLpseSet = activeAssignmentsMap.get(person.nama.trim());
-          if (activeLpseSet && activeLpseSet.size > 0) { 
+          const activeLpseMap = activeAssignmentsMap.get(person.nama.trim());
+          if (activeLpseMap && activeLpseMap.size > 0) { 
               isUsed = true; 
-              // Convert Set to Array and Join smartly
-              const lpseArray = Array.from(activeLpseSet);
+              // Convert Map Values to Array
+              const lpseArray = Array.from(activeLpseMap.values());
               let lpseString = "";
               if (lpseArray.length === 1) {
                   lpseString = lpseArray[0];
@@ -1130,7 +1135,7 @@
           htmlContent.push(`
             <tr>
               <td>
-                <div class="fw-bold fs-6 mb-1 text-dark">${pekerjaan}</div>
+                <div class="fw-bold fs-6 mb-1 text-dark pe-5">${pekerjaan}</div>
                 
                 <div class="d-flex align-items-center gap-2 mb-2 d-md-none">
                    <span class="badge ${badgeClass}">${statusText || 'Not Started'}</span>
