--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000080"
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <title>SIDAMON Gaharu Sempana Group</title>
@@ -1463,5 +1467,6 @@
   </script>
 </body>
 </html>
+
 
 
